force-app/main/default/objects/EYI_Project__c/fields/Conga_Template_Id_Booking_Form_excl_OC__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Id_Booking_Form_excl_OC__c</fullName>
    <label>Conga Template Id Booking Form excl OC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>