force-app/main/default/objects/EYI_Project__c/fields/Conga_Template_Id_for_NCF__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Id_for_NCF__c</fullName>
    <label>Conga Template Id for NCF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>