force-app/main/default/objects/EYI_Project__c/fields/Conga_Template_Id_for_Welcome_Letter__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Id_for_Welcome_Letter__c</fullName>
    <label>Conga Template Id for Welcome Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>