force-app/main/default/objects/EYI_Project__c/fields/EY_Conga_Template_Id_for_Car_Park_Letter__c.field-meta.xml
<CustomField>
    <fullName>EY_Conga_Template_Id_for_Car_Park_Letter__c</fullName>
    <label>Conga Template Id for Car Park Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>