force-app/main/default/objects/EYI_Project__c/fields/EYI_Account_Number_GST__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_Number_GST__c</fullName>
    <label>Account Number GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>