force-app/main/default/objects/EYI_Project__c/fields/EYI_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>EYI_Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outright</fullName>
            </value>
            <value>
                <fullName>Leasing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>