force-app/main/default/objects/EYI_Project__c/fields/EYI_Bank_Name_GST__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Name_GST__c</fullName>
    <label>Bank Name GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>