force-app/main/default/objects/EYI_Project__c/fields/EYI_Booking_Form_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Form_Page_Number__c</fullName>
    <label>Booking Form Page Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>