force-app/main/default/objects/EYI_Project__c/fields/EYI_Brochure_Link__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brochure_Link__c</fullName>
    <label>Brochure Link</label>
    <type>Url</type>
</CustomField>