force-app/main/default/objects/EYI_Project__c/fields/EYI_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage__c</fullName>
    <description>Brokerage % for Brokerage record.</description>
    <label>Brokerage %</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>