force-app/main/default/objects/EYI_Project__c/fields/EYI_Car_Park_Type_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Car_Park_Type_1__c</fullName>
    <label>Common Area 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground Podium</fullName>
            </value>
            <value>
                <fullName>Measurement Podium</fullName>
            </value>
            <value>
                <fullName>Ground Stilt</fullName>
            </value>
            <value>
                <fullName>Measurement Stilt</fullName>
            </value>
            <value>
                <fullName>Open Car Parking</fullName>
            </value>
            <value>
                <fullName>Stack Car Parking</fullName>
            </value>
            <value>
                <fullName>Below Metal deck</fullName>
            </value>
            <value>
                <fullName>Compact Covered lower ground</fullName>
            </value>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Covered - Below building</fullName>
            </value>
            <value>
                <fullName>Covered- Below Metal Deck</fullName>
            </value>
            <value>
                <fullName>Covered for office</fullName>
            </value>
            <value>
                <fullName>Covered for retail/restaurant</fullName>
            </value>
            <value>
                <fullName>Large Covered</fullName>
            </value>
            <value>
                <fullName>Large Covered Lower Ground</fullName>
            </value>
            <value>
                <fullName>Large Covered - Premium</fullName>
            </value>
            <value>
                <fullName>Large Covered Upper Ground</fullName>
            </value>
            <value>
                <fullName>Large Open Upper Ground</fullName>
            </value>
            <value>
                <fullName>Larges Cover</fullName>
            </value>
            <value>
                <fullName>Mech Covered</fullName>
            </value>
            <value>
                <fullName>Mech Open</fullName>
            </value>
            <value>
                <fullName>Medium Covered</fullName>
            </value>
            <value>
                <fullName>Medium Covered Lower Ground</fullName>
            </value>
            <value>
                <fullName>One covered and one open</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Open - Premium</fullName>
            </value>
            <value>
                <fullName>Side by Side</fullName>
            </value>
            <value>
                <fullName>Side by Side covered</fullName>
            </value>
            <value>
                <fullName>Single Covered and Open</fullName>
            </value>
            <value>
                <fullName>Single Covered and Side by Side</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>