force-app/main/default/objects/EYI_Project__c/fields/EYI_Charge_Value_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Charge_Value_1__c</fullName>
    <label>Interest on common area 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>