force-app/main/default/objects/EYI_Project__c/fields/EYI_Chatbot_Active__c.field-meta.xml
<CustomField>
    <fullName>EYI_Chatbot_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatbot Active</label>
    <type>Checkbox</type>
</CustomField>