force-app/main/default/objects/EYI_Project__c/fields/EYI_Cheque_Favouring_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cheque_Favouring_Name__c</fullName>
    <label>Cheque Favouring Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>