force-app/main/default/objects/EYI_Project__c/fields/EYI_Cheque_Favouring_Name_GST__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cheque_Favouring_Name_GST__c</fullName>
    <label>Cheque Favouring Name GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>