force-app/main/default/objects/EYI_Project__c/fields/EYI_CIN_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_CIN_Number__c</fullName>
    <label>CIN Number</label>
    <length>21</length>
    <type>Text</type>
</CustomField>