force-app/main/default/objects/EYI_Project__c/fields/EYI_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_City__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>