force-app/main/default/objects/EYI_Project__c/fields/EYI_Conga_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conga_Template_Id__c</fullName>
    <description>To add Conga project Template Id</description>
    <label>Conga Template Id for Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>