force-app/main/default/objects/EYI_Project__c/fields/EYI_Conga_Template_Id_for_Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conga_Template_Id_for_Booking_Form__c</fullName>
    <label>Conga Template Id for Booking Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>