force-app/main/default/objects/EYI_Project__c/fields/EYI_Conga_Template_Id_For_Possessions__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conga_Template_Id_For_Possessions__c</fullName>
    <label>Conga Template Id For Possessions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>