force-app/main/default/objects/EYI_Project__c/fields/EYI_Conga_Template_Id_for_Quote_Excl_OC__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conga_Template_Id_for_Quote_Excl_OC__c</fullName>
    <label>Conga Template Id for Quote (Excl OC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>