force-app/main/default/objects/EYI_Project__c/fields/EYI_Contact_Us__c.field-meta.xml
<CustomField>
    <fullName>EYI_Contact_Us__c</fullName>
    <label>Contact Us</label>
    <type>Phone</type>
</CustomField>