force-app/main/default/objects/EYI_Project__c/fields/EYI_Dec_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Dec_Achievement__c</fullName>
    <label>Dec Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>