force-app/main/default/objects/EYI_Project__c/fields/EYI_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Description__c</fullName>
    <description>This field is used to capture project code description.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>