force-app/main/default/objects/EYI_Project__c/fields/EYI_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>EYI_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>Common</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Residential Sales</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Commercial Sales</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Domestic Sales</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Export Sales</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Sale of Services</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>Group Company Sales</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>Stock Transfer</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>Other Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>