force-app/main/default/objects/EYI_Project__c/fields/EYI_Exclude_Club_House__c.field-meta.xml
<CustomField>
    <fullName>EYI_Exclude_Club_House__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Club House in Other Charges</label>
    <type>Checkbox</type>
</CustomField>