force-app/main/default/objects/EYI_Project__c/fields/EYI_Exclude_MSEB_from_Infra_Charges__c.field-meta.xml
<CustomField>
    <fullName>EYI_Exclude_MSEB_from_Infra_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add MSEB in Other Charges</label>
    <type>Checkbox</type>
</CustomField>