force-app/main/default/objects/EYI_Project__c/fields/EYI_Global_Charges__c.field-meta.xml
<CustomField>
    <fullName>EYI_Global_Charges__c</fullName>
    <label>Global Charges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Infra</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>MSEB</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Legal Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>