force-app/main/default/objects/EYI_Project__c/fields/EYI_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Number__c</fullName>
    <label>GST Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>