force-app/main/default/objects/EYI_Project__c/fields/EYI_GST_Pay_Schedule_Charge__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Pay_Schedule_Charge__c</fullName>
    <label>GST Pay Schedule Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>