force-app/main/default/objects/EYI_Project__c/fields/EYI_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>