force-app/main/default/objects/EYI_Project__c/fields/EYI_Is_Generic__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Generic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for marking Projects on Brand level generic</description>
    <label>Is Generic</label>
    <type>Checkbox</type>
</CustomField>