force-app/main/default/objects/EYI_Project__c/fields/EYI_ISFC_Code_GST__c.field-meta.xml
<CustomField>
    <fullName>EYI_ISFC_Code_GST__c</fullName>
    <label>ISFC Code GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>