force-app/main/default/objects/EYI_Project__c/fields/EYI_L2_Base_Rate_L__c.field-meta.xml
<CustomField>
    <fullName>EYI_L2_Base_Rate_L__c</fullName>
    <label>L2 Base Rate L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>