force-app/main/default/objects/EYI_Project__c/fields/EYI_Land_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Land_Area__c</fullName>
    <label>Land Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>