force-app/main/default/objects/EYI_Project__c/fields/EYI_Level__c.field-meta.xml
<CustomField>
    <fullName>EYI_Level__c</fullName>
    <description>This field is created to store project levels. This value can capture manually from SAP.</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>