force-app/main/default/objects/EYI_Project__c/fields/EYI_Lockated_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lockated_Project_Code__c</fullName>
    <label>EYI Lockated Project Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>