force-app/main/default/objects/EYI_Project__c/fields/EYI_Market_value_of_the_unit__c.field-meta.xml
<CustomField>
    <fullName>EYI_Market_value_of_the_unit__c</fullName>
    <label>Market value of the unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>