force-app/main/default/objects/EYI_Project__c/fields/EYI_Minimum_Booking_Amt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Minimum_Booking_Amt__c</fullName>
    <label>Minimum Booking Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>