force-app/main/default/objects/EYI_Project__c/fields/EYI_Minimum_Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Minimum_Token_Amount__c</fullName>
    <label>Minimum Token Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>