force-app/main/default/objects/EYI_Project__c/fields/EYI_NPV_Percent__c.field-meta.xml
<CustomField>
    <fullName>EYI_NPV_Percent__c</fullName>
    <label>NPV Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>