force-app/main/default/objects/EYI_Project__c/fields/EYI_Number_Of_Towers__c.field-meta.xml
<CustomField>
    <fullName>EYI_Number_Of_Towers__c</fullName>
    <label>Number Of Towers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>