force-app/main/default/objects/EYI_Project__c/fields/EYI_Number_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>EYI_Number_Of_Units__c</fullName>
    <label>Number Of Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>