force-app/main/default/objects/EYI_Project__c/fields/EYI_Opportunity_TAT__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity_TAT__c</fullName>
    <label>Opportunity TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>