force-app/main/default/objects/EYI_Project__c/fields/EYI_PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_PAN_Number__c</fullName>
    <label>PAN Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>