force-app/main/default/objects/EYI_Project__c/fields/EYI_Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Charges__c</fullName>
    <label>Parking Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>