force-app/main/default/objects/EYI_Project__c/fields/EYI_Price_Onwards__c.field-meta.xml
<CustomField>
    <fullName>EYI_Price_Onwards__c</fullName>
    <label>Price Onwards</label>
    <length>255</length>
    <type>Text</type>
</CustomField>