force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Code__c</fullName>
    <label>Project Code</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>