force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Document_Links__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Document_Links__c</fullName>
    <label>Project Document Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>