force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Location__c</fullName>
    <label>Project Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>