force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Number__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Project Number</label>
    <type>AutoNumber</type>
</CustomField>