force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Site_Location_Link__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Site_Location_Link__c</fullName>
    <label>Project Site Location Link</label>
    <type>Url</type>
</CustomField>