force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Size_In_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Size_In_Sq_Mtr__c</fullName>
    <label>Project Size In Sq Mtr</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>