force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Start_Date__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>