force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teaser</fullName>
            </value>
            <value>
                <fullName>Pre- Launch</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Post Launch</fullName>
            </value>
            <value>
                <fullName>Sustenance</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>