force-app/main/default/objects/EYI_Project__c/fields/EYI_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>