force-app/main/default/objects/EYI_Project__c/fields/EYI_RDS_State__c.field-meta.xml
<CustomField>
    <fullName>EYI_RDS_State__c</fullName>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>